[gd_scene load_steps=2 format=3 uid="uid://myf472nbh7xt"]

[ext_resource type="Script" uid="uid://bt0i3grtnr87w" path="res://main.gd" id="1_x21m5"]

[node name="Main" type="Node"]
script = ExtResource("1_x21m5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 557.0
offset_bottom = 152.0

[node name="tanggal_input" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "\"Tanggal (YYYY-MM_DD)\""

[node name="jenis_input" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "\"Jenis Pajak\""

[node name="nominal_input" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "\"Nominal Pajak\""

[node name="keterangan_input" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "\"Keterangan Input\""

[node name="simpan_btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "SIMPAN CATATAN"

[node name="daftar_catatan" type="ItemList" parent="VBoxContainer"]
layout_mode = 2

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
